--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "devDependencies": {
     "css-loader": "^7.1.2",
+    "css-minimizer-webpack-plugin": "^7.0.0",
     "less-loader": "^12.2.0",
+    "mini-css-extract-plugin": "^2.9.0",
     "style-loader": "^4.0.0"
   },
   "name": "mywebpack",
